[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio", "time", "uuid"] }
dashmap = "5.5.3"
